Remove overflow-x hidden to fix disqus

--- a/css/style.scss
+++ b/css/style.scss
@@ -46,7 +46,6 @@ body {
 	color: $white;
 	font-size: 16px;
 	height: 100%;
-	overflow-x: hidden;
 	width: 100%
 }
 
